--- a/lab8/src/App.css
+++ b/lab8/src/App.css
@@ -13,6 +13,30 @@
   }
 }
 
+.Title {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 40px;
+  color: rgb(15, 87, 36);
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.ContainerForList {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid rgba(24, 95, 7, 0.904);
+  border-radius: 5px;
+  padding: 15px;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
