--- a/lab10/src/App.css
+++ b/lab10/src/App.css
@@ -13,6 +13,14 @@
   }
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
